samples/_failures_safe/1761432899_c9445c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23d4e109.c: In function ‘main’:
./samples/SAFE/__tmp_23d4e109.c:158:9: error: expected declaration or statement at end of input
  158 |         index++;
      |         ^~~~~
./samples/SAFE/__tmp_23d4e109.c:158:9: error: expected declaration or statement at end of input
